# CVPDL_2025_HW2

./: .gitignore  README.md  inference.py  pyproject.toml  requirements.txt  train.py  yolo_inference.py  yolo_train.py
src/: yolo_dataset.py  yolo_drone.yaml  yolo_tune.py
