[project]
name = "cvpdl-2025-hw2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.11.13"
dependencies = [
  "torch==2.8.0+cu129",
  "torchvision==0.23.0",
  "torchaudio==2.8.0",
  "tensorboard>=2.20.0",
  "pandas>=2.3.3",
  "ultralytics==8.3.220",
  "tqdm>=4.67.1",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu129" },
]
torchvision = [
  { index = "pytorch-cu129" },
]
torchaudio = [
  { index = "pytorch-cu129" },
]

[[tool.uv.index]]
name = "pytorch-cu129"
url = "https://download.pytorch.org/whl/cu129"
explicit = true
